--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header>Header</header>
-    <main>Main</main>
+    <main>Main Content</main>
     <footer>Footer</footer>
 </body>
 </html>
